crates/pcb-zen/tests/snapshots/test__nested_components.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "C1")
      (value "100nF")
      (footprint "stdlib_kicad-footprints_Capacitor_SMD:C_0805_2012Metric")
      (libsource (lib "lib") (part "100nF") (description "unknown"))
      (sheetpath (names "MyModule.MyComponent.Component.C") (tstamps "ea4c93b1-3277-5020-b515-e3532cd4ce61"))
      (tstamps "ea4c93b1-3277-5020-b515-e3532cd4ce61")
      (property (name "Reference") (value "C1"))
      (property (name "capacitance") (value "100nF"))
      (property (name "description") (value "100nF"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "package") (value "0805"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
      (property (name "value") (value "100nF"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "100nF")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "MyModule.MyComponent.P1")
      (node (ref "C1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "MyModule.MyComponent.P2")
      (node (ref "C1") (pin "2") (pintype "stereo"))
    )
  )
)
