crates/pcb-zen/tests/snapshots/test__net_name_deduplication.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "R1")
      (value "1k")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "1k") (description "unknown"))
      (sheetpath (names "MyModule1.Component.R") (tstamps "fd151ad8-bfb8-5b4d-b24b-028398924ded"))
      (tstamps "fd151ad8-bfb8-5b4d-b24b-028398924ded")
      (property (name "Reference") (value "R1"))
      (property (name "description") (value "1k"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "package") (value "0402"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
      (property (name "resistance") (value "1k"))
      (property (name "value") (value "1k"))
    )
    (comp (ref "R2")
      (value "1k")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "1k") (description "unknown"))
      (sheetpath (names "MyModule2.Component.R") (tstamps "abd6df5a-c895-5201-b0c7-94e477bd86ec"))
      (tstamps "abd6df5a-c895-5201-b0c7-94e477bd86ec")
      (property (name "Reference") (value "R2"))
      (property (name "description") (value "1k"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "package") (value "0402"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
      (property (name "resistance") (value "1k"))
      (property (name "value") (value "1k"))
    )
    (comp (ref "R3")
      (value "1k")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0402_1005Metric")
      (libsource (lib "lib") (part "1k") (description "unknown"))
      (sheetpath (names "MyModule3.Component.R") (tstamps "7370bd72-b536-55c0-bd73-8bb99cf4456d"))
      (tstamps "7370bd72-b536-55c0-bd73-8bb99cf4456d")
      (property (name "Reference") (value "R3"))
      (property (name "description") (value "1k"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "package") (value "0402"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
      (property (name "resistance") (value "1k"))
      (property (name "value") (value "1k"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "1k")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "MyModule1.GND")
      (node (ref "R1") (pin "2") (pintype "stereo"))
    )
    (net (code "2") (name "MyModule1.INTERNAL")
      (node (ref "R1") (pin "1") (pintype "stereo"))
    )
    (net (code "3") (name "MyModule2.GND")
      (node (ref "R2") (pin "2") (pintype "stereo"))
    )
    (net (code "4") (name "MyModule2.INTERNAL")
      (node (ref "R2") (pin "1") (pintype "stereo"))
    )
    (net (code "5") (name "MyModule3.GND")
      (node (ref "R3") (pin "2") (pintype "stereo"))
    )
    (net (code "6") (name "MyModule3.INTERNAL")
      (node (ref "R3") (pin "1") (pintype "stereo"))
    )
  )
)
