crates/pcb-zen/tests/snapshots/test__net_passing.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "C1")
      (value "100nF")
      (footprint "stdlib_kicad-footprints_Capacitor_SMD:C_0805_2012Metric")
      (libsource (lib "lib") (part "100nF") (description "unknown"))
      (sheetpath (names "Test.MyComponent.capacitor.C") (tstamps "2792cb21-213d-5a61-9661-44e29404f9ad"))
      (tstamps "2792cb21-213d-5a61-9661-44e29404f9ad")
      (property (name "Reference") (value "C1"))
      (property (name "capacitance") (value "100nF"))
      (property (name "description") (value "100nF"))
      (property (name "package") (value "0805"))
      (property (name "value") (value "100nF"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "100nF")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "Test.INTERFACE_p1")
      (node (ref "C1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "Test.INTERFACE_p2")
      (node (ref "C1") (pin "2") (pintype "stereo"))
    )
  )
)
Advice: io() parameter 'component_input' should be UPPERCASE: 'COMPONENT_INPUT'
   ╭─[ [TEMP_DIR]MyComponent.zen:3:1 ]
 3 │component_input = io(ComponentInterface)
   │       ╰──────── io() parameter 'component_input' should be UPPERCASE: 'COMPONENT_INPUT'
