crates/pcb-zen/tests/snapshots/test__snapshot_missing_pins_should_error.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
Error: Unconnected pin(s): GND, OE, Q2, Q3, Q4, VDD
    ╭─[ [TEMP_DIR]test_missing.zen:3:1 ]
    │
  3 │ ╭─▶ Component(
    ┆ ┆   
 11 │ ├─▶ )
    │ │       
    │ ╰─────── Unconnected pin(s): GND, OE, Q2, Q3, Q4, VDD
────╯
