crates/pcb-zen/tests/snapshots/test__snapshot_unknown_pin_should_error.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
Error: Unknown pin name 'INVALID' (expected one of: ICLK, Q1, Q2, Q3, OE, VDD, GND, Q4)
    ╭─[ [TEMP_DIR]test_unknown.zen:3:1 ]
    │
  3 │ ╭─▶ Component(
    ┆ ┆   
 18 │ ├─▶ )
    │ │       
    │ ╰─────── Unknown pin name 'INVALID' (expected one of: ICLK, Q1, Q2, Q3, OE, VDD, GND, Q4)
────╯
