crates/pcb-zen/tests/snapshots/test__snapshot_unused_inputs_should_error.snap
---
source: crates/pcb-zen/tests/test.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
  )
)
Error: Unknown argument(s) provided to module my_module: unused
   ╭─[ [TEMP_DIR]top.zen:4:1 ]
   │
 4 │ ╭─▶ MyModule(
   ┆ ┆   
 7 │ ├─▶ )
   │ │       
   │ ╰─────── Unknown argument(s) provided to module my_module: unused
───╯
